- header concertado - added textos nordico + hindu

--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"></a>
-    <h1>Irlandesa</h1>
+    <h1>Egipcia</h1>
   </header>
   <main>
     <div class="container-main">
