--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -1,71 +1,167 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../paginas/css/nordica.css">
-    <link rel="stylesheet" href="../paginas/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../paginas/css/nordica.css" />
+    <link rel="stylesheet" href="../paginas/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Nórdica | SEPE</title>
-</head>
+  </head>
 
-<body>
-  <header>
-    <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"></a>
-    <h1>Irlandesa</h1>
-  </header>
+  <body>
+    <header>
+      <a href="../paginas/index.html" id="logo"
+        ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
+      /></a>
+      <h1>Nórdica</h1>
+    </header>
     <div class="row">
-        <div class="col">
-            1 of 3
-        </div>
-        <div class="col-6">
-          <h1>Mitologia Nórdica:</h1>
-          <p>A <strong>mitologia nórdica</strong>, viking ou germânica, possui mais de um nome por ser uma crença de vários povos, foi
-            desenvolvida nos países escandinavos ou nórdicos, como as atuais Suécia, Noruega, Finlândia, Islândia e
-            Dinamarca. Assim como a maioria das mitologias teve grande influência na configuração cultural desses povos e
-            até hoje inspira filmes, quadrinhos, séries e etc.
-            Constituída de deuses, heróis, anões, gigantes, serpentes, lobos e feiticeiros, as lendas relatam
-            acontecimentos que procuram explicar a origem da humanidade, a vida após a morte, fenômenos da natureza,
-            dentre outros.
-          </p>
-        </div>
-        <div class="col">
-            3 of 3
-        </div>
+      <div class="col">1 of 3</div>
+      <div class="col-6"><h1>Mitologia Nórdica:</h1>
+        <p>
+          A <strong>mitologia nórdica</strong>, viking ou germânica, possui mais
+          de um nome por ser uma crença de vários povos, foi desenvolvida nos
+          países escandinavos ou nórdicos, como as atuais Suécia, Noruega,
+          Finlândia, Islândia e Dinamarca. Assim como a maioria das mitologias
+          teve grande influência na configuração cultural desses povos e até
+          hoje inspira filmes, quadrinhos, séries e etc. Constituída de deuses,
+          heróis, anões, gigantes, serpentes, lobos e feiticeiros, as lendas
+          relatam acontecimentos que procuram explicar a origem da humanidade, a
+          vida após a morte, fenômenos da natureza, dentre outros.
+        </p>
+        <figure>
+          <figcaption>
+            A mitologia nórdica é composta por 9 mundos, sendo esses:
+          </figcaption>
+          <img src="imagens/nordica-texto.jpg" alt="" />
+        </figure>
+        <ul>
+          <li>
+            <strong>Midgard:</strong> terra média e reino dos humanos, que
+            corresponde ao planeta Terra (mundo físico). Jord é a deusa guardiã
+            desse mundo.
+          </li>
+          <li>
+            <strong>Asgard:</strong>separado do mundo dos humanos por imensos
+            muros, Asgard é reino dos deuses (mundo superior, os céus) e seu
+            guardião é Heimdall. Seus líderes são Odin, o deus maior da
+            mitologia nórdica, e Frigga, a deusa da fertilidade.
+          </li>
+          <li>
+            <strong>Niflheim:</strong> governada pela deusa Hel, deusa do
+            inferno, e filha de Loki, Niflheim corresponde ao reino do gelo e do
+            frio, onde se encontram gigantes e anões do gelo.
+          </li>
+          <li>
+            <strong>Vanaheim:</strong> mundo de repouso dos deuses Vanir, local
+            onde nasceu Njord, deus protetor dos navegadores, e o principal do
+            clã dos Vanir
+          </li>
+          <li>
+            <strong>Svartalfheim:</strong> local onde os deuses subterrâneos,
+            chamados de svartálfar, moravam. Seu líder é Hoder, deus cego, irmão
+            de Balder, deus da justiça, e filho de Odin e Frigga.
+          </li>
+          <li>
+            <strong>Jotunheim:</strong> reino dos gigantes, chamados de Jotuns,
+            sendo que sua principal cidade é Utgard. Seu líder é Thrym, rei dos
+            gigantes.
+          </li>
+          <li>
+            <strong>Nidavellir:</strong> reino dos anões, que está localizado
+            nos subterrâneos de Midgard. Seu líder é Vidar, deus da vingança, e
+            filho de Odin.
+          </li>
+          <li>
+            <strong>Muspelheim:</strong>reino do fogo, onde vivem os gigantes de
+            fogo. Seu líder é Surtr, o gigante de fogo.
+          </li>
+          <li>
+            <strong>Álfheim:</strong> reino dos elfos, seres mágicos de
+            aparência humana e enorme beleza.
+          </li>
+        </ul>
+        <h2>Bifrost</h2>
+        <p>
+          Bifrost é o nome dado à ponte de ligação entre o reino dos deuses,
+          Asgard, e o reino dos homens, Midgard.
+        </p>
+        <h2>Yggdrasil</h2>
+        <p>
+          Árvore mítica e sagrada da mitologia nórdica, considerada a árvore da
+          vida e que sustenta os nove mundos. Ela é o eixo do mundo e suas
+          profundas raízes os conectam.
+        </p>
+        <h2>Valhalla</h2>
+        <p>
+          Valhalla, chamada de “Salão dos Mortos”, corresponde à residência dos
+          deuses, ou seja, o local onde eles eram recebidos após a morte honrada
+          nas batalhas.
+        </p>
+        <h2>Ragnarök</h2>
+        <p>
+          Na mitologia nórdica, Ragnarök corresponde ao local do destino final
+          dos deuses. A batalha de Ragnarök aconteceu na região de Midgard,
+          entre as forças do bem e do mal, resultando no fim do mundo e de todas
+          as criaturas - deuses, heróis, gigantes, monstros.
+          Diferente de outras mitologias, nesta os deuses não são imortais e com a batalha de Ragnarök muitos deles morrerão, dando origem a outros novos.
+        </p>
+        <h3>Deuses da mitologia nórdica</h3>
+        <p>Veja abaixo os principais deuses que compõem a mitologia nórdica:</p></div>
+      <div class="col">
+        3 of 3
+      </div>
     </div>
     <footer>
-        <div class="footer-container">
-          <div class="footer-logo">
-            <img src="../../../back/imagens/LYJEK.png" alt="Logo do site">
-          </div>
-          <div class="footer-links">
-            <ul>
-              <li><a href="../paginas/index.html">Página Inicial</a></li>
-              <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
-              <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
-              <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
-              <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
-              <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
-              <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
-              <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
-            </ul>
-          </div>
-          <div class="footer-social">
-            <ul>
-              <li><a href="https://github.com/spricigom"><i>Emili</i></a></li>
-              <li><a href="https://github.com/Joaovictor23t4"><i>João</i></a></li>
-              <li><a href="https://github.com/kauabarros-24"><i>Kauã</i></a></li>
-              <li><a href="https://github.com/dnzLucas"><i>Lucas</i></a></li>
-              <li><a href="https://github.com/LuizEduardoCR"><i>Luiz Eduardo</i></a></li>
-              <li><a href="https://github.com/LuizBlume"><i>Luiz Fernando</i></a></li>
-              <li><a href="https://github.com/YohanaJahn"><i>Yohana</i></a></li>
-            </ul>
-          </div>
+      <div class="footer-container">
+        <div class="footer-logo">
+          <img src="../../../back/imagens/LYJEK.png" alt="Logo do site" />
         </div>
-        <div class="footer-bottom">
-          <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
+        <div class="footer-links">
+          <ul>
+            <li><a href="../paginas/index.html">Página Inicial</a></li>
+            <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
+            <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+            <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
+            <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
+            <li>
+              <a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a>
+            </li>
+            <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
+            <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
+          </ul>
         </div>
-      </footer>
-</body>
-
+        <div class="footer-social">
+          <ul>
+            <li>
+              <a href="https://github.com/spricigom"><i>Emili</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/Joaovictor23t4"><i>João</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/kauabarros-24"><i>Kauã</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/dnzLucas"><i>Lucas</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/LuizEduardoCR"><i>Luiz Eduardo</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/LuizBlume"><i>Luiz Fernando</i></a>
+            </li>
+            <li>
+              <a href="https://github.com/YohanaJahn"><i>Yohana</i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
+      </div>
+    </footer>
+  </body>
 </html>
