grega, hindu e nordica pronta

--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -22,10 +22,14 @@
 
   <div class="row">
     <div class="col">
-      1 of 3
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
     </div>
     <div class="col-6">
-
+      <h1 class="h1-texto">Mitologia Hindu:</h1>
       <p>Está fundada nos Vedas, que são os livros sagrados dos hindus. Segundo a crença, o próprio Brahma os escreveu.
         Brahma é o Deus supremo da tríade hindu. Seus atributos são representados pelos três poderes: criação,
         conservação e destruição, que formam a Trimuri ou trindade dos principais deuses: Brahma, Vishnu e Shiva,
@@ -146,8 +150,6 @@
           ódio,
           ganância, desrespeito, discórdia, entre outros. Ou seja, ele é a luz em meio a escuridão.</li>
         <li><b>Mão apontando para terra:</b> representação do autocontrole durante sua passagem pela terra.</li>
-
-              
       </ul>
 
       <p>O avatar se tornou referência aos hindus, que buscam viver a vida de acordo com as suas representações e com o
@@ -226,13 +228,16 @@
         tinha força para vencer as batalhas mais profundas e obscuras, como a Guerra de Lanka – uma batalha contra o
         império do demônio. Além disso, ele demonstrava possuir muita sabedoria e domínio de seus instintos, é assim que
         conseguia sempre se superar e vencer seus inimigos.</p>
-
-
-
-
+        <div class="botao">
+          <a href="../quiz/hindu.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
+        </div>
     </div>
     <div class="col">
-      3 of 3
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
+      <img src="../paginas/imagens/img-aside.png" alt="" class="img-aside">
     </div>
   </div>
   <footer>
