--- a/front/site/paginas/index.html
+++ b/front/site/paginas/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -11,39 +11,104 @@
 <body>
   <div class="container">
     <div class="tabs">
-      <input id="web" type="radio" name="slider" checked>
-      <input id="grafico" type="radio" name="slider">
-      <input id="fotografia" type="radio" name="slider">
+      <input id="egipcia" type="radio" name="slider" checked>
+      <input id="grega" type="radio" name="slider">
+      <input id="hindu" type="radio" name="slider">
+      <input id="irlandesa" type="radio" name="slider">
+      <input id="japonesa" type="radio" name="slider">
+      <input id="mesopotamica" type="radio" name="slider">
+      <input id="nordica" type="radio" name="slider">
+      <input id="romana" type="radio" name="slider">
+
+     
       <div class="botoes">
-        <label for="web"></label>
-        <label for="grafico"></label>
-        <label for="fotografia"></label>
+        <label for="egipcia"></label>
+        <label for="grega"></label>
+        <label for="hindu"></label>
+        <label for="irlandesa"></label>
+        <label for="japonesa"></label>
+        <label for="mesopotamica"></label>
+        <label for="nordica"></label>
+        <label for="romana"></label>
+
+
+
       </div>
       <div class="conteudo">
-        <div class="caixa web">
+        <div class="caixa egipcia">
           <div class="conteudocx">
             <ion-icon name="earth-outline"></ion-icon>
-            <h2>Desenvolvimento Web</h2>
+            <h2>Mitologia egipcia</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
               repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
               deleniti, eaque enim consequatur.</p>
               <button>Aprender Mais</button>
           </div>
         </div>
-        <div class="caixa grafico">
+        <div class="caixa grega">
           <div class="conteudocx">
             <ion-icon name="camera-outline"></ion-icon>
-            <h2>design grafico</h2>
+            <h2>Mitologia grega</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
               repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
               deleniti, eaque enim consequatur.</p>
               <button>Aprender Mais</button>
           </div>
         </div>
-        <div class="caixa fotografia">
+        <div class="caixa hindu">
           <div class="conteudocx">
             <ion-icon name="image-outline"></ion-icon>
-            <h2>fotografia</h2>
+            <h2>Mitologia hindu</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
+              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
+              deleniti, eaque enim consequatur.</p>
+              <button>Aprender Mais</button>
+          </div>
+        </div>
+        <div class="caixa irlandesa">
+          <div class="conteudocx">
+            <ion-icon name="image-outline"></ion-icon>
+            <h2>Mitologia irlandesa</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
+              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
+              deleniti, eaque enim consequatur.</p>
+              <button>Aprender Mais</button>
+          </div>
+        </div>
+        <div class="caixa japonesa">
+          <div class="conteudocx">
+            <ion-icon name="image-outline"></ion-icon>
+            <h2>Mitologia japonesa</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
+              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
+              deleniti, eaque enim consequatur.</p>
+              <button>Aprender Mais</button>
+          </div>
+        </div>
+        <div class="caixa mesopotamica">
+          <div class="conteudocx">
+            <ion-icon name="image-outline"></ion-icon>
+            <h2>Mitologia mesopotamica</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
+              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
+              deleniti, eaque enim consequatur.</p>
+              <button>Aprender Mais</button>
+          </div>
+        </div>
+        <div class="caixa nordica">
+          <div class="conteudocx">
+            <ion-icon name="image-outline"></ion-icon>
+            <h2>Mitologia nordica</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
+              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
+              deleniti, eaque enim consequatur.</p>
+              <button>Aprender Mais</button>
+          </div>
+        </div>
+        <div class="caixa romana">
+          <div class="conteudocx">
+            <ion-icon name="image-outline"></ion-icon>
+            <h2>Mitologia romana</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
               repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
               deleniti, eaque enim consequatur.</p>
