index quase pronto

--- a/front/site/paginas/index.html
+++ b/front/site/paginas/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,31 +9,11 @@
   <title>Index | SEPE</title>
 </head>
 
+
 <body>
-  <header>
-    <nav>
-        <ul class="lista-nav">
-            <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
-            <li>
-                <a href="#">QUIZ <span id="seta-baixo">&darr;</span></a>
-                <ul class="dropdown">
-                    <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
-                    <li class="link-dropdown" id="linkFenicia"><a href="fenicia.html">Fenícia</a></li>
-                    <li class="link-dropdown" id="linkGrecoRomana"><a href="greco-romana.html">Greco-Romana</a></li>
-                    <li class="link-dropdown" id="linkHindu"><a href="hindu.html">Hindu</a></li>
-                    <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
-                    <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
-                    <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
-                    <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
-                </ul>
-            </li>
-            <li id="linkNordica"><a href="../paginas/nordica.html">MITOLOGIA NÓRDICA</a></li>
-        </ul>
-    </nav>
-</header>
   <div class="container">
     <div class="tabs">
-      <input id="egipcia" type="radio" name="slider" checked>
+      <input id="egipcia" type="radio" name="slider" checked></a>
       <input id="grega" type="radio" name="slider">
       <input id="hindu" type="radio" name="slider">
       <input id="irlandesa" type="radio" name="slider">
@@ -40,6 +21,7 @@
       <input id="mesopotamica" type="radio" name="slider">
       <input id="nordica" type="radio" name="slider">
       <input id="romana" type="radio" name="slider">
+
 
      
       <div class="botoes">
@@ -54,99 +36,81 @@
 
 
 
+
+
+
       </div>
       <div class="conteudo">
         <div class="caixa egipcia">
           <div class="conteudocx">
-            <ion-icon name="earth-outline"></ion-icon>
+            <ion-icon name="image-outline"></ion-icon>
             <h2>Mitologia egipcia</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
-              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
-              deleniti, eaque enim consequatur.</p>
-              <button>Aprender Mais</button>
+            <p>A mitologia egípcia é uma antiga tradição de crenças e histórias do Egito Antigo, envolvendo deuses, rituais e uma forte influência na cultura egípcia, com ênfase na vida após a morte.</p>
+              <a href="../paginas/egipcia.html"><button>Aprender Mais</button></a>
           </div>
         </div>
         <div class="caixa grega">
           <div class="conteudocx">
-            <ion-icon name="camera-outline"></ion-icon>
+            <ion-icon name="image-outline"></ion-icon>
             <h2>Mitologia grega</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
-              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
-              deleniti, eaque enim consequatur.</p>
-              <button>Aprender Mais</button>
+            <p>A mitologia grega é um conjunto de lendas e histórias da Grécia Antiga sobre deuses, heróis e criaturas míticas que desempenharam papéis significativos na cultura e na compreensão do mundo naquela época.</p>
+              <a href="../paginas/grega.html"><button>Aprender Mais</button></a>
           </div>
         </div>
         <div class="caixa hindu">
           <div class="conteudocx">
             <ion-icon name="image-outline"></ion-icon>
             <h2>Mitologia hindu</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
-              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
-              deleniti, eaque enim consequatur.</p>
-              <button>Aprender Mais</button>
+            <p>A mitologia hindu é um conjunto de histórias e crenças da Índia, envolvendo diversos deuses e deusas, lendas e ensinamentos espirituais que têm sido fundamentais na cultura e na religião hindu ao longo da história.</p>
+              <a href="../paginas/hindu.html"><button>Aprender Mais</button></a>
           </div>
         </div>
         <div class="caixa irlandesa">
           <div class="conteudocx">
             <ion-icon name="image-outline"></ion-icon>
             <h2>Mitologia irlandesa</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
-              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
-              deleniti, eaque enim consequatur.</p>
-              <button>Aprender Mais</button>
+            <p>A mitologia irlandesa é um rico conjunto de mitos e lendas que fazem parte do folclore da Irlanda. Ela apresenta deuses, heróis e criaturas mágicas, e desempenhou um papel importante na cultura irlandesa ao longo da história.</p>
+              <a href="../paginas/irlandesa.html"><button>Aprender Mais</button></a>
           </div>
         </div>
         <div class="caixa japonesa">
           <div class="conteudocx">
             <ion-icon name="image-outline"></ion-icon>
             <h2>Mitologia japonesa</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
-              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
-              deleniti, eaque enim consequatur.</p>
-              <button>Aprender Mais</button>
+            <p>A mitologia japonesa é um conjunto de crenças e lendas do Japão, envolvendo deuses, espíritos e criaturas míticas que desempenham papéis significativos na cultura e espiritualidade japonesa.</p>
+              <a href="../paginas/japonesa.html"><button>Aprender Mais</button></a>
           </div>
         </div>
         <div class="caixa mesopotamica">
           <div class="conteudocx">
             <ion-icon name="image-outline"></ion-icon>
             <h2>Mitologia mesopotamica</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
-              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
-              deleniti, eaque enim consequatur.</p>
-              <button>Aprender Mais</button>
+            <p>A mitologia mesopotâmica é um conjunto de crenças e lendas das antigas civilizações que habitaram a região da Mesopotâmia, entre os rios Tigre e Eufrates. Ela envolve uma variedade de deuses e figuras míticas que desempenharam papéis significativos na cultura dessas civilizações.</p>
+              <a href="../paginas/mesopotamica.html"><button>Aprender Mais</button></a>
           </div>
         </div>
         <div class="caixa nordica">
           <div class="conteudocx">
             <ion-icon name="image-outline"></ion-icon>
             <h2>Mitologia nordica</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
-              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
-              deleniti, eaque enim consequatur.</p>
-              <button>Aprender Mais</button>
+            <p>A mitologia nórdica, ou escandinava, é um conjunto de lendas e crenças das culturas da Escandinávia, incluindo deuses, heróis e criaturas míticas que desempenham papéis importantes nas histórias e na cultura desses povos.</p>
+              <a href="../paginas/nordica.html"><button>Aprender Mais</button></a>
           </div>
         </div>
         <div class="caixa romana">
           <div class="conteudocx">
             <ion-icon name="image-outline"></ion-icon>
             <h2>Mitologia romana</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
-              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
-              deleniti, eaque enim consequatur.</p>
-              <button>Aprender Mais</button>
+            <p>A mitologia romana é um conjunto de crenças e lendas da Roma Antiga, envolvendo deuses, heróis e histórias que desempenharam papéis significativos na cultura e religião romanas.</p>
+              <a href="../paginas/romana.html"><button>Aprender Mais</button></a>
           </div>
         </div>
       </div>
     </div>
-
-
-
   </div>
-  <section style="height: 500px;" >
-
-  </section>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 
 </html>
